# flappy-bird-sfml

./: .gitignore  CMakeLists.txt  README.md
include/: AssetManager.hpp  Background.hpp  Game.hpp  GameOverState.hpp  GameState.hpp  GameStateManager.hpp  Logger.hpp  MenuState.hpp  Pipe.hpp  PipeManager.hpp  Player.hpp  ScoreManager.hpp
include/entities/: Pipe.hpp  Player.hpp
include/states/: GameOverState.hpp  MenuState.hpp  PlayState.hpp
lib/cmake/FLAC/: flac-config.cmake  targets.cmake
lib/cmake/Ogg/: OggConfig.cmake  OggTargets.cmake
lib/cmake/SFML/: SFMLAudioDependencies.cmake  SFMLAudioSharedTargets.cmake  SFMLAudioStaticTargets.cmake  SFMLConfig.cmake  SFMLGraphicsDependencies.cmake  SFMLGraphicsSharedTargets.cmake  SFMLGraphicsStaticTargets.cmake  SFMLMainSharedTargets.cmake  SFMLMainStaticTargets.cmake  SFMLNetworkSharedTargets.cmake  SFMLNetworkStaticTargets.cmake  SFMLSystemDependencies.cmake  SFMLSystemSharedTargets.cmake  SFMLSystemStaticTargets.cmake  SFMLWindowDependencies.cmake  SFMLWindowSharedTargets.cmake  SFMLWindowStaticTargets.cmake
lib/cmake/Vorbis/: VorbisConfig.cmake  VorbisTargets.cmake
lib/cmake/freetype/: freetype-config.cmake
src/: AssetManager.cpp  Background.cpp  Game.cpp  GameOverState.cpp  GameStateManager.cpp  MenuState.cpp  Pipe.cpp  PipeManager.cpp  PlayState.cpp  Player.cpp  ScoreManager.cpp  main.cpp
src/entities/: Pipe.cpp  Player.cpp
src/states/: GameOverState.cpp  MenuState.cpp  PlayState.cpp
